Fix overlapped dots and fix ticker CSS

--- a/src/components/Carousel/Carousel.scss
+++ b/src/components/Carousel/Carousel.scss
@@ -6,9 +6,11 @@
     .slick-dots {
         bottom: -30px;
         z-index: $z-index-1;
+        overflow-x: hidden;
         padding-left: 5px;
         max-width: 50%;
         text-align: left;
+        white-space: nowrap;
 
         li {
             width: 12px;
